# palaestra

./: .gitignore  Cargo.toml
src/: lib.rs  main.rs
src/controllers/: mod.rs  notes_controller.rs
src/models/: note.rs
src/repository/: mod.rs  notes_repository.rs
src/services/: mod.rs  notes_service.rs
