[package]
name = "paleastra"
version = "0.1.0"
edition = "2021"

[dependencies]
agdb = "0.11.2"
axum = "0.8.4"
reqwest = {version = "0.12.23", features = ["blocking", "json"]}
serde = {version = "1.0.219", features = ["derive"]}
serde_json = "1.0.142"
string-error = "0.1.0"
tokio = {version = "1.47.1", features = ["full"]}
tracing-subscriber = "0.3.19"
